--- a/src/assets/styles/product.scss
+++ b/src/assets/styles/product.scss
@@ -18,3 +18,31 @@
 .ant-upload-list-item-error {
   border: none !important;
 }
+.dynamic-input {
+  width: 160px;
+}
+.text-editor {
+  height: 560px;
+}
+.add-product-btn {
+  width: 15%;
+  height: 40px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.view-product-image {
+  width: 110px;
+  height: 110px;
+}
+.product-image-card {
+  height: 445px;
+}
+.submit-btn {
+  width: 120px;
+  height: 30px;
+  margin: auto;
+}
+.vendor-form-item {
+  margin-bottom: 10px !important;
+}
